infrastructure/kubernetes/manifests/renderred/production/resources/istio/Charts/istiod/ValidatingWebhookConfiguration/istio-validator-istio-system.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
    labels:
        app: istiod
        app.kubernetes.io/instance: istiod
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: istiod
        app.kubernetes.io/part-of: istio
        app.kubernetes.io/version: 1.27.0
        helm.sh/chart: istiod-1.27.0
        istio: istiod
        istio.io/rev: default
        release: istiod
    name: istio-validator-istio-system
webhooks:
    - admissionReviewVersions:
        - v1
      clientConfig:
        service:
            name: istiod
            namespace: istio-system
            path: /validate
      failurePolicy: Ignore
      name: rev.validation.istio.io
      objectSelector:
        matchExpressions:
            - key: istio.io/rev
              operator: In
              values:
                - default
      rules:
        - apiGroups:
            - security.istio.io
            - networking.istio.io
            - telemetry.istio.io
            - extensions.istio.io
          apiVersions:
            - '*'
          operations:
            - CREATE
            - UPDATE
          resources:
            - '*'
      sideEffects: None
